--- a/src/Backend/Core/Layout/Sass/components/_formbuilder.scss
+++ b/src/Backend/Core/Layout/Sass/components/_formbuilder.scss
@@ -54,7 +54,7 @@
       }
 
       .icon {
-        margin-right: 9px;
+        margin: 0 6px 0 3px;
         width: 14px;
       }
     }
